RESOLVED FIXED153734
REGRESSION (r194660): Legacy WebProcess crashes in ChildProcess::initializeSandbox()
https://bugs.webkit.org/show_bug.cgi?id=153734
Summary REGRESSION (r194660): Legacy WebProcess crashes in ChildProcess::initializeSa...
mitz
Reported 2016-01-31 21:00:07 PST
After <http://trac.webkit.org/r194660>, WebProcess crashes on launch in ChildProcess::initializeSandbox, because parameters.connectionIdentifier.xpcConnection is null in a legacy process.
Attachments
Patch (2.00 KB, patch)
2016-02-01 14:19 PST, Daniel Bates
no flags
Patch (5.83 KB, patch)
2016-02-02 17:06 PST, Daniel Bates
mitz: review+
mitz
Comment 1 2016-01-31 21:04:14 PST
I think it is OK to simply have legacy processes always take the “Unsigned, signed by a third party, or has an invalid/malformed signature” branch.
Radar WebKit Bug Importer
Comment 2 2016-01-31 22:56:16 PST
Daniel Bates
Comment 3 2016-02-01 14:19:08 PST
Daniel Bates
Comment 4 2016-02-01 14:20:44 PST
I take it that we need to keep around such legacy process support?
Daniel Bates
Comment 5 2016-02-02 17:06:34 PST
Daniel Bates
Comment 6 2016-02-03 08:34:41 PST
Note You need to log in before you can comment on or make changes to this bug.