REGRESSION (r194660): Legacy WebProcess crashes in ChildProcess::initializeSandbox() https://bugs.webkit.org/show_bug.cgi?id=153734 <rdar://problem/24433179>

Reviewed by Dan Bernstein.

Fixes an issue where clients that used the legacy WebProcess bootstrapping process would crash.

Additionally, only consider the extra initialization parameter user-directory-suffix for
unsigned apps (e.g. WebKitTestRunner).

* Shared/mac/ChildProcessMac.mm:
(WebKit::ChildProcess::initializeSandbox):

Canonical link: https://commits.webkit.org/171923@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@196066 268f45cc-cd09-0410-ab3c-d52691b4dbfc